--- a/app/src/main/res/layout/activity_update_profile.xml
+++ b/app/src/main/res/layout/activity_update_profile.xml
@@ -60,98 +60,10 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:layout_weight="1"
-                android:elevation="5dp"
-                android:padding="8dp"
-                android:orientation="vertical">
 
-                <TextView
-                    android:layout_width="80dp"
-                    android:layout_height="60dp"
-                    android:id="@+id/postsNumber"
-                    android:text=""
-                    android:gravity="center"
-                    android:textAlignment="center"
-                    android:textColor="@color/lavender"
-                    android:textSize="26sp"
-                    android:textStyle="bold"/>
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/posts"
-                    android:text=""
-                    android:textAlignment="center"
-                    android:textColor="@color/lavender"
-                    android:textSize="16sp"/>
 
-            </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:layout_weight="1"
-                android:elevation="5dp"
-                android:padding="8dp"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="80dp"
-                    android:layout_height="60dp"
-                    android:id="@+id/followersNo"
-                    android:text=""
-                    android:gravity="center"
-                    android:textAlignment="center"
-                    android:textColor="@color/lavender"
-                    android:textSize="26sp"
-                    android:textStyle="bold"/>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/followers"
-                    android:text=""
-                    android:textAlignment="center"
-                    android:textColor="@color/lavender"
-                    android:textSize="16sp"/>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:layout_weight="1"
-                android:elevation="5dp"
-                android:padding="8dp"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="80dp"
-                    android:layout_height="60dp"
-                    android:id="@+id/followingNo"
-                    android:text=""
-                    android:gravity="center"
-                    android:textAlignment="center"
-                    android:textColor="@color/lavender"
-                    android:textSize="26sp"
-                    android:textStyle="bold"/>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/following"
-                    android:text=""
-                    android:textAlignment="center"
-                    android:textColor="@color/lavender"
-                    android:textSize="16sp"/>
-
-            </LinearLayout>
 
         </LinearLayout>
 
@@ -175,13 +87,13 @@
                 android:textColor="@color/lavender"
                 android:textSize="18sp"/>
 
-            <TextView
+            <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/profileName"
-                android:text="name"
+                android:ems="5"
                 android:layout_weight="1"
-                android:textAlignment="viewEnd"
+
 
                 android:textSize="18sp"/>
 
@@ -211,13 +123,13 @@
                 android:textColor="@color/lavender"
                 android:textSize="18sp"/>
 
-            <TextView
+            <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/profileEmail"
-                android:text="email"
+                android:ems="5"
                 android:layout_weight="1"
-                android:textAlignment="viewEnd"
+
 
                 android:textSize="18sp"/>
 
@@ -247,15 +159,15 @@
                 android:textColor="@color/lavender"
                 android:textSize="18sp"/>
 
-            <TextView
+            <EditText
+                android:id="@+id/profileUsername"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/profileUsername"
-                android:text="username"
                 android:layout_weight="1"
-                android:textAlignment="viewEnd"
+                android:ems="5"
 
-                android:textSize="18sp"/>
+
+                android:textSize="18sp" />
 
         </LinearLayout>
 
@@ -283,15 +195,15 @@
                 android:textColor="@color/lavender"
                 android:textSize="18sp"/>
 
-            <TextView
+            <EditText
+                android:id="@+id/profilePassword"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/profilePassword"
-                android:text="password"
                 android:layout_weight="1"
-                android:textAlignment="viewEnd"
+                android:ems="5"
 
-                android:textSize="18sp"/>
+
+                android:textSize="18sp" />
 
         </LinearLayout>
 
@@ -302,7 +214,7 @@
         android:layout_height="60dp"
         android:id="@+id/editButton"
         android:gravity="center"
-        android:text="Edit Profile"
+        android:text="Save"
         android:textSize="18sp"
         app:cornerRadius = "20dp"
         app:layout_constraintBottom_toBottomOf="parent"
